cloudformation/template.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Code Server'

Parameters:
  InstanceType:
    Type: String
    Default: t4g.medium
    AllowedValues:
      - t4g.nano
      - t4g.micro
      - t4g.small
      - t4g.medium
      - t4g.large
    Description: EC2 instance type (Arm-based Graviton2)

  CodeServerVersion:
    Type: String
    Default: 4.108.0
    Description: code-server version to install

  CodeServerUser:
    Type: String
    Default: ec2-user
    Description: User to run code-server

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-VPC

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-PublicSubnet

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-IGW

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-PublicRouteTable

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  EC2InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
        - arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
        - arn:aws:iam::aws:policy/AWSCodeCommitPowerUser
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-EC2-SSM-Role

  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref EC2InstanceRole

  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for EC2 instance
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourcePrefixListId: pl-58a04531
          Description: Allow HTTP from CloudFront
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-EC2-SecurityGroup

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Sub '{{resolve:ssm:/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-arm64}}'
      InstanceType: !Ref InstanceType
      SubnetId: !Ref PublicSubnet
      SecurityGroupIds:
        - !Ref EC2SecurityGroup
      IamInstanceProfile: !Ref EC2InstanceProfile
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y git nginx
          dnf -y update
          dnf -y install docker
          systemctl enable docker
          systemctl start docker
          gpasswd -a ${CodeServerUser} docker
          curl -fOL https://github.com/coder/code-server/releases/download/v${CodeServerVersion}/code-server-${CodeServerVersion}-arm64.rpm
          rpm  -i code-server-${CodeServerVersion}-arm64.rpm
          systemctl enable code-server@${CodeServerUser}
          systemctl start code-server@${CodeServerUser}
          cat << "EOF" > /usr/local/bin/cspwd
          #!/bin/bash
          cat /home/ec2-user/.config/code-server/config.yaml | grep password: | sed -r 's/password: (.*)/\1/'
          EOF
          chmod +x /usr/local/bin/cspwd
          cat << 'EOF' > /etc/nginx/conf.d/server.conf
          server {
            server_name           *.cloudfront.net;
            location / {
              proxy_pass          http://localhost:8080/;
              proxy_set_header    Host $host;
              proxy_set_header    Upgrade $http_upgrade;
              proxy_set_header    Connection upgrade;
              proxy_set_header    Accept-Encoding gzip;
            }
          }
          EOF
          systemctl enable nginx
          systemctl start nginx
          cat << 'EOF' > /tmp/requirements.txt
          bash_kernel
          jupyter
          jupyterlab
          EOF
          cat << 'EOF' > /tmp/install.sh
          #!/bin/bash
          cd /home/${CodeServerUser}
          python3 -m venv .venv
          source .venv/bin/activate
          pip install --no-cache-dir -r /tmp/requirements.txt
          python -m bash_kernel.install
          code-server --install-extension "ms-toolsai.jupyter"
          code-server --install-extension "ms-toolsai.vscode-jupyter-powertoys"
          code-server --install-extension "ms-python.python"
          code-server --install-extension "amazonwebservices.aws-toolkit-vscode"
          code-server --install-extension "docker.docker"
          curl -fsSL https://deno.land/install.sh | sh
          echo 'export PATH="$HOME/.deno/bin:$PATH"' >> .bashrc
          .deno/bin/deno jupyter --install
          EOF
          chmod +x /tmp/install.sh
          su - ${CodeServerUser} -c "/tmp/install.sh"
          cat << 'EOF' >> /home/${CodeServerUser}/.gitconfig
          [credential]
          helper = !aws codecommit credential-helper $@
          UseHttpPath = true
          EOF
          chown ${CodeServerUser}:${CodeServerUser} /home/${CodeServerUser}/.gitconfig
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-EC2-Instance

  CloudFrontDistribution:
    Type: AWS::CloudFront::Distribution
    Properties:
      DistributionConfig:
        Enabled: true
        Comment: !Sub ${AWS::StackName} CloudFront Distribution
        DefaultCacheBehavior:
          TargetOriginId: EC2Origin
          ViewerProtocolPolicy: https-only
          CachePolicyId: 4135ea2d-6df8-44a3-9df3-4b5a84be39ad
          OriginRequestPolicyId: 216adef6-5c7f-47e4-b989-5492eafa07d3
          AllowedMethods:
            - GET
            - HEAD
            - OPTIONS
            - PUT
            - POST
            - PATCH
            - DELETE
        Origins:
          - Id: EC2Origin
            DomainName: !GetAtt EC2Instance.PublicDnsName
            CustomOriginConfig:
              HTTPPort: 80
              OriginProtocolPolicy: http-only
        PriceClass: PriceClass_100
